# FunASR

./: .gitignore
agent_review/abf3319c/: fix_record.md  review_report.md
funasr/models/rwkv_bat/cuda_decoder/: wkv_op.cpp
funasr/models/rwkv_bat/cuda_encoder/: wkv_op.cpp
mo-docs/: model-guide.md  onnxruntime-build-targets.md  onnxruntime-targets-quickref.md  speaker-diarization-guide.md
runtime/grpc/: CMakeLists.txt  paraformer-server.h
runtime/http/: CMakeLists.txt
runtime/onnxruntime/: CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt
runtime/onnxruntime/cmake/: conan_provider.cmake
runtime/onnxruntime/include/: audio.h  campplus-model.h  com-define.h  funasrruntime.h  itn-model.h  model.h  offline-stream.h  punc-model.h  speaker-diarization.h  tpass-online-stream.h  tpass-stream.h  vad-model.h
runtime/onnxruntime/include/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h  sstream.h
runtime/onnxruntime/recipes/x86_64-Linux-gcc-11.4/: build.sh  build_bundle.sh  platform.cmake
runtime/onnxruntime/src/: CMakeLists.txt  alignedmem.cpp  alignedmem.h  audio.cpp  bias-lm.cpp  bias-lm.h  campplus-model.cpp  common-struct.h  commonfunc.h  ct-transformer-online.cpp  ct-transformer-online.h  ct-transformer.cpp  ct-transformer.h  e2e-vad.h  encode_converter.cpp  encode_converter.h  fsmn-vad-online.cpp  fsmn-vad-online.h  fsmn-vad.cpp  fsmn-vad.h  funasrruntime.cpp  itn-processor.cpp  itn-processor.h  itn-token-parser.cpp  itn-token-parser.h  model.cpp  offline-stream.cpp  paraformer-online.cpp  paraformer-online.h  paraformer-torch.cpp  paraformer-torch.h  paraformer.cpp  paraformer.h  phone-set.cpp  phone-set.h  precomp.h  predefine-coe.h  punc-model.cpp  resample.cpp  resample.h  (+20 more)
runtime/websocket/: CMakeLists.txt
scripts/: download_models.sh  export_campplus_onnx.py
